--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
 }
 
 .navbar-logo span:hover {
-  color: #e2d816;
+  color: #a37e2d;
 }
 
 .navbar-menu {
@@ -57,7 +57,7 @@
 }
 
 .navbar-menu a:hover {
-  color: #e2d816;
+  color: #a37e2d;
 }
 
 .navbar-menu a::after {
@@ -67,7 +67,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #e2d816;
+  background-color: #a37e2d;
   transition: width 0.3s ease;
 }
 
@@ -84,7 +84,7 @@
 }
 
 .navbar-login:hover {
-  background-color: #e2d816;
+  background-color: #a37e2d;
   color: #ffffff !important;
 }
 
